<resources>
    <string name="app_name">Notify</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="name">Name</string>
    <string name="confirm">Confirm Password</string>
    <string name="register">Register</string>
    <string name="logout">LogOut</string>
    <string name="e_mail">E-mail</string>
    <string name="sign_up">Sign Up</string>
    <string name="passwords_don_t_match">Passwords Don\'t Match</string>


    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="got_it">Got it</string>
    <string name="slide1_title">Notify</string>
    <string name="slide1_desc">One open platform to handel it all</string>
    <string name="slide2_title">Privacy</string>
    <string name="slide2_desc">No more sharing of private contact info with Annoying colleagues</string>
    <string name="slide3_title">Real Time</string>
    <string name="slide3_desc">Get Notifications instantly on the go!</string>
    <string name="slide4_title">Custom groups and messages</string>
    <string name="slide4_desc">Get important Notices or dank memes!\nits upto you</string>
    <string name="group_name">Group Name</string>
    <string name="create_group">Create Group</string>
    <string name="send_message">Send Message</string>
    <string name="message">Message</string>
</resources>
