<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    android:id="@+id/login_coordinator"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/SilverSilverSilver"
    >

<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="60dp"
    android:paddingRight="25dp"
    android:paddingLeft="25dp"
    >

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:src="@drawable/logo"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="60dp"
        android:elevation="40dp" />


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">
        <EditText
            android:singleLine="true"
            android:id="@+id/user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_name"
            android:inputType="text"
            android:maxLength="20"
            android:textSize="20sp"
            />
        </android.support.design.widget.TextInputLayout>





    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">
        <EditText
            android:singleLine="true"
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLength="20"
            android:textSize="20sp"
            />
    </android.support.design.widget.TextInputLayout>



    <android.support.v7.widget.AppCompatButton
        android:id="@+id/login"
        android:text="@string/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:textColor="@color/SilverSilverSilver"
        android:background="@color/GeelaNeela"
        android:padding="10dp"

        />


    <TextView
        android:text="Still haven't Signed Up?"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/sign_up"
        android:text=" Join today!"
        android:textColor="@color/GeelaNeela"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />


    </LinearLayout>
    </ScrollView>
    </android.support.design.widget.CoordinatorLayout>
